Changes for 5.2.0 version
Upgrade Selenium dependencies to 4.13.0 version
+ update deprecated/removed features

Remove some deprecated warnings about Double/Integer/BigDecimal

Update spot-workbench-utils project to 5.2.0 version

Update in spot-sample-scenarios project
- Update scripts: take into account new FF versions and fix compilation
issue
- fix missing changes regarding removal of gecko driver as a system
property